--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,8 @@ libm4ri_la_SOURCES = \
 	m4ri/mmc.c \
 	m4ri/debug_dump.c \
 	m4ri/io.c \
-	m4ri/djb.c
+	m4ri/djb.c \
+	m4ri/mp.c	
 
 BUILT_SOURCES = m4ri/m4ri_config.h
 
@@ -46,7 +47,8 @@ pkgincludesub_HEADERS = m4ri/m4ri.h \
 	m4ri/mmc.h \
 	m4ri/debug_dump.h \
 	m4ri/io.h \
-	m4ri/djb.h
+	m4ri/djb.h \
+	m4ri/mp.h
 
 nodist_pkgincludesub_HEADERS = m4ri/m4ri_config.h
 
