Add option --enable-thread-safe which disables known thread unsafe functions.

--- a/src/m4ri_config.h.in
+++ b/src/m4ri_config.h.in
@@ -23,4 +23,7 @@
 #define __M4RI_USE_POSIX_MEMALIGN	(__M4RI_HAVE_POSIX_MEMALIGN && __M4RI_HAVE_SSE2)
 #define __M4RI_DD_QUIET			(@M4RI_DEBUG_MZD@ && !@M4RI_DEBUG_DUMP@)
 
+#define __M4RI_ENABLE_MZD_CACHE         @M4RI_ENABLE_MZD_CACHE@
+#define __M4RI_ENABLE_MMC               @M4RI_ENABLE_MMC@
+
 #endif // M4RI_M4RI_CONFIG_H
