Rename "src/" to "m4ri/" to avoid confusion

--- a/.hgignore
+++ b/.hgignore
@@ -8,7 +8,6 @@ autom4te.cache
 compile
 config.guess
 config.sub
-src/config.h.in
 configure
 depcomp
 install-sh
@@ -25,16 +24,17 @@ config.log
 config.status
 libtool
 m4ri.pc
-src/config.h
-src/m4ri_config.h
-src/stamp-h1
+m4ri/config.h
+m4ri/config.h.in
+m4ri/m4ri_config.h
+m4ri/.dirstamp
+m4ri/stamp-h1
 testsuite/Makefile
 *.o
 *.lo
 .libs
 test-driver
 libm4ri.la
-src/.dirstamp
 testsuite/bench_elimination
 testsuite/bench_elimination_sparse
 testsuite/bench_invert
