--- a/Makefile.am
+++ b/Makefile.am
@@ -60,54 +60,5 @@ pkgconfig_DATA = m4ri.pc
 libm4ri_la_LDFLAGS = -release 0.0.$(RELEASE) -no-undefined
 libm4ri_la_LIBADD = $(LIBPNG_LIBADD)
 
-check_PROGRAMS=test_multiplication test_elimination test_trsm test_ple test_solve test_kernel test_random test_smallops test_transpose test_colswap test_invert test_misc
-test_multiplication_SOURCES=tests/test_multiplication.c
-test_multiplication_LDFLAGS=-lm4ri -lm
-test_multiplication_CFLAGS=$(AM_CFLAGS)
-
-test_elimination_SOURCES=tests/test_elimination.c
-test_elimination_LDFLAGS=-lm4ri -lm
-test_elimination_CFLAGS=$(AM_CFLAGS)
-
-test_trsm_SOURCES=tests/test_trsm.c
-test_trsm_LDFLAGS=-lm4ri -lm
-test_trsm_CFLAGS=$(AM_CFLAGS)
-
-test_ple_SOURCES=tests/test_ple.c
-test_ple_LDFLAGS=-lm4ri -lm
-test_ple_CFLAGS=$(AM_CFLAGS)
-
-test_solve_SOURCES=tests/test_solve.c
-test_solve_LDFLAGS=-lm4ri -lm
-test_solve_CFLAGS=$(AM_CFLAGS)
-
-test_kernel_SOURCES=tests/test_kernel.c
-test_kernel_LDFLAGS=-lm4ri -lm
-test_kernel_CFLAGS=$(AM_CFLAGS)
-
-test_random_SOURCES=tests/test_random.c
-test_random_LDFLAGS=-lm4ri -lm
-test_random_CFLAGS=$(AM_CFLAGS)
-
-test_smallops_SOURCES=tests/test_smallops.c tests/testing.c tests/testing.h
-test_smallops_LDFLAGS=-lm4ri -lm
-test_smallops_CFLAGS=$(AM_CFLAGS)
-
-test_transpose_SOURCES=tests/test_transpose.c
-test_transpose_LDFLAGS=-lm4ri -lm
-test_transpose_CFLAGS=$(AM_CFLAGS)
-
-test_colswap_SOURCES=tests/test_colswap.c
-test_colswap_LDFLAGS=-lm4ri -lm
-test_colswap_CFLAGS=$(AM_CFLAGS)
-
-test_invert_SOURCES=tests/test_invert.c
-test_invert_LDFLAGS=-lm4ri -lm
-test_invert_CFLAGS=$(AM_CFLAGS)
-
-test_misc_SOURCES=tests/test_misc.c
-test_misc_LDFLAGS=-lm4ri -lm
-test_misc_CFLAGS=$(AM_CFLAGS)
-
-TESTS = test_multiplication test_elimination test_trsm test_ple test_solve test_kernel test_random test_smallops test_transpose test_colswap test_invert test_misc
+SUBDIRS = . tests bench
 
