--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,6 @@ ltmain.sh
 m4/libtool.m4
 m4ri.pc
 missing
-src/.deps/
-src/.dirstamp
-src/config.h
-src/config.h.in
-src/m4ri_config.h
-src/stamp-h1
 test-driver
 test_colswap
 test_elimination
@@ -38,17 +32,20 @@ test_smallops
 test_solve
 test_transpose
 test_trsm
-testsuite/.deps/
-testsuite/.dirstamp
-testsuite/Makefile
-testsuite/bench_elimination
-testsuite/bench_elimination_sparse
-testsuite/bench_invert
-testsuite/bench_multiplication
-testsuite/bench_mzd
-testsuite/bench_ple
-testsuite/bench_rank
-testsuite/bench_trsm
-testsuite/cpucycles-20060326/cpucycles.h
-testsuite/cpucycles-20060326/do.notes
-testsuite/cpucycles.h
+/bench/bench_elimination
+/bench/bench_elimination_sparse
+/bench/bench_invert
+/bench/bench_multiplication
+/bench/bench_mzd
+/bench/bench_ple
+/bench/bench_rank
+/bench/bench_trsm
+/bench/cpucycles-20060326/cpucycles.h
+/bench/cpucycles-20060326/do.notes
+/bench/cpucycles.h
+/*/.deps/
+/*/.dirstamp
+/m4ri/config.h
+/m4ri/config.h.in
+/m4ri/m4ri_config.h
+/m4ri/stamp-h1
