don't build benchmarketing by default
On some systems building the benchmarketing tools fails. Since they are
not essential, we don't build them by default.

--- a/Makefile.am
+++ b/Makefile.am
@@ -60,5 +60,5 @@ pkgconfig_DATA = m4ri.pc
 libm4ri_la_LDFLAGS = -release 0.0.$(RELEASE) -no-undefined
 libm4ri_la_LIBADD = $(LIBPNG_LIBADD)
 
-SUBDIRS = . tests bench
+SUBDIRS = . tests
 
