Add test for multiplication using DJB's "Optimizing linear maps mod 2"

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -32,7 +32,8 @@ TESTS = test_elimination \
 	test_colswap \
 	test_misc \
 	test_invert \
-        test_alignment
+	test_alignment \
+	test_djb
 
 check_PROGRAMS = $(TESTS)
 
