--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,10 @@
-# You can specify a custom docker image from Docker Hub as your build environment.
 image: gcc:6.1
 
 pipelines:
   default:
     - step:
-        script: # Modify the commands below to build your repository.
+        script:
+          - autoreconf
           - ./configure
           - make
           - make distcheck
