--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ pipelines:
   default:
     - step:
         script:
-          - autoreconf
+          - autoreconf -i
           - ./configure
           - make
           - make distcheck
