--- a/m4ri.pc.in
+++ b/m4ri.pc.in
@@ -7,5 +7,5 @@ Name: M4RI
 Description: Dense linear algebra over GF(2).
 Version: @PACKAGE_VERSION@
 Requires: @M4RI_USE_PNG_PC@
-Libs: -L${libdir} -lm4ri @RAW_LIBPNG@ -lm
+Libs: -L${libdir} -lm4ri @RAW_LIBPNG@ @LIBM@
 Cflags: -I${includedir} @SIMD_CFLAGS@ @OPENMP_CFLAGS@
