--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,6 +5,6 @@ pipelines:
     - step:
         script:
           - autoreconf -i
-          - ./configure
+          - ./configure --enable-debug
           - make
           - make distcheck
