--- a/m4ri.pc.in
+++ b/m4ri.pc.in
@@ -8,4 +8,4 @@ Description: Dense linear algebra over GF(2).
 Version: @PACKAGE_VERSION@
 Requires: @M4RI_USE_PNG_PC@
 Libs: -L${libdir} -lm4ri @RAW_LIBPNG@ @LIBM@ @LIBPNG_LIBADD@
-Cflags: -I${includedir} @SIMD_FLAGS@ @OPENMP_CFLAGS@ @LIBPNG_CFLAGS@
+Cflags: -I${includedir} @OPENMP_CFLAGS@ @LIBPNG_CFLAGS@
