--- a/m4ri.pc.in
+++ b/m4ri.pc.in
@@ -6,6 +6,7 @@ includedir=@includedir@
 Name: M4RI
 Description: Dense linear algebra over GF(2).
 Version: @PACKAGE_VERSION@
-Requires: @M4RI_USE_PNG_PC@
-Libs: -L${libdir} -lm4ri @RAW_LIBPNG@ @LIBM@ @LIBPNG_LIBADD@
+Requires.private: @M4RI_USE_PNG_PC@
+Libs: -L${libdir} -lm4ri @LIBM@
+Libs.private: @RAW_LIBPNG@ @LIBPNG_LIBADD@
 Cflags: -I${includedir} @OPENMP_CFLAGS@ @LIBPNG_CFLAGS@
