--- a/m4ri.pc.in
+++ b/m4ri.pc.in
@@ -8,5 +8,5 @@ Description: Dense linear algebra over GF(2).
 Version: @PACKAGE_VERSION@
 Requires.private: @M4RI_USE_PNG_PC@
 Libs: -L${libdir} -lm4ri @LIBM@
-Libs.private: @RAW_LIBPNG@ @LIBPNG_LIBADD@
-Cflags: -I${includedir} @OPENMP_CFLAGS@ @LIBPNG_CFLAGS@
+Libs.private: @OPENMP_CFLAGS@ @RAW_LIBPNG@ @LIBPNG_LIBADD@
+Cflags: -I${includedir} @LIBPNG_CFLAGS@
